# scy_ReadPortfolio_Agent

./: .env.example  .gitignore  CLAUDE.md  MEMO.md  README.md  app.py  config.py  fix_doc.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: check-file-size.yml  sync-to-huggingface.yml
app/: CLAUDE.md  __init__.py  app.py  portfolio_origins.py  rag.py  rag_eval.py
data/: CLAUDE.md  candidate_profile.py  portfolio_origins.yaml
data/portfolio/: .gitkeep  DC_Crawling-LDA-Analysis.md  RAG_Boardgame_Rulebook.md  ai-health-consultation.md  etf_recommendation.md  llm-crag.md  scy_ReadPortfolio_Agent.md  text-to-sql-marketing_data-.md
docs/: RAG_ARCHITECTURE.md  RAG_HYBRID_QUERY_EXPANSION_PLAN.md  RAG_SOURCE_EXPANSION_SPEC.md  architecture_diagram.html  chain_flow.html  question_flow_diagram.html  노션_소개글.md  코드_동작_설명.md
index/: .gitkeep
notebooks/: test_rag.ipynb
scripts/: CLAUDE.md  __init__.py  build_index.py  evaluate_rag.py  portfolio_origins_audit.py
